--- a/PhenoPad/App.xaml
+++ b/PhenoPad/App.xaml
@@ -5,4 +5,22 @@
     xmlns:local="using:PhenoPad"
     RequestedTheme="Light">
 
+    <Application.Resources>
+        <!-- Application-specific resources -->
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+
+                <!-- 
+                    Styles that define common aspects of the platform look and feel
+                    Required by Visual Studio project and item templates
+                 -->
+                <ResourceDictionary Source="/Styles/Styles.xaml"/>
+            </ResourceDictionary.MergedDictionaries>
+            <SolidColorBrush x:Key="PHENOTYPE_BLUE">#6DBCDB</SolidColorBrush>
+            <SolidColorBrush x:Key="BUTTON_GRAY">#E3E1DA</SolidColorBrush>
+        </ResourceDictionary>
+
+        
+    </Application.Resources>
+    
 </Application>
