--- a/PhenoPad/MainPage.xaml
+++ b/PhenoPad/MainPage.xaml
@@ -1,13 +1,191 @@
-﻿<Page
-    x:Class="PhenoPad.MainPage"
+﻿<!--
+//*********************************************************
+//
+// Copyright (c) Microsoft. All rights reserved.
+// This code is licensed under the MIT License (MIT).
+// THIS CODE IS PROVIDED *AS IS* WITHOUT WARRANTY OF
+// ANY KIND, EITHER EXPRESS OR IMPLIED, INCLUDING ANY
+// IMPLIED WARRANTIES OF FITNESS FOR A PARTICULAR
+// PURPOSE, MERCHANTABILITY, OR NON-INFRINGEMENT.
+//
+//*********************************************************
+-->
+<Page
+      x:Class="PhenoPad.MainPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:PhenoPad"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    mc:Ignorable="d">
+    xmlns:customcontrol="using:PhenoPad.CustomContorl"
+    xmlns:phenotypeservice="using:PhenoPad.PhenotypeService"
+    xmlns:photovideoservice="using:PhenoPad.PhotoVideoService"
+    mc:Ignorable="d"
+    Loaded="Page_Loaded">
+    
 
-    <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
+    <Grid x:Name="RootGrid" Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="*"/>
+        </Grid.RowDefinitions>
+        <ContentControl x:Name="PageHost" Grid.Row="0">
+            <ContentControl.ContentTransitions>
+                <TransitionCollection>
+                    <ContentThemeTransition x:Name="PageHostContentTrans"/>
+                </TransitionCollection>
+            </ContentControl.ContentTransitions>
+        </ContentControl>
+        <RelativePanel Name="CmdRelativePanel" Grid.Row="0">
+            <RelativePanel.Resources>
+                <Storyboard x:Name="AddedPhenoGridEnterSB">
+                    <FadeInThemeAnimation Storyboard.TargetName="addedPhenoGrid" />
+                </Storyboard>
+            </RelativePanel.Resources>
 
+            <Border x:Name="StatusBorder" Margin="0,0,0,0" RelativePanel.AlignTopWithPanel="True" RelativePanel.AlignHorizontalCenterWithPanel="True" MinWidth="500" Height="40">
+
+                <TextBlock x:Name="StatusBlock" FontWeight="Bold" Foreground="White" TextAlignment="Center"
+                                   MaxWidth="{Binding ElementName=Splitter, Path=ActualWidth}" Margin="10,10,10,10" TextWrapping="Wrap"  />
+            </Border>
+            
+            <InkToolbar Name="MainPageInkBar" ActiveToolChanged="CurrentToolChanged" Orientation="Vertical" ButtonFlyoutPlacement="Left" RelativePanel.AlignTopWithPanel="True"
+                        RelativePanel.AlignRightWithPanel="True">
+                <InkToolbar.Resources>
+                    <BrushCollection x:Key="CalligraphicPenPalette">
+                        <SolidColorBrush>Black</SolidColorBrush>
+                        <SolidColorBrush>Brown</SolidColorBrush>
+                        <SolidColorBrush>Red</SolidColorBrush>
+                        <SolidColorBrush Color="#FFFFCE00"/>
+                        <SolidColorBrush Color="#FF26E600"/>
+                        <SolidColorBrush Color="#FF004DE6"/>
+                    </BrushCollection>
+                    <local:CalligraphicPen x:Key="CalligraphicPen"/>
+                    <Style TargetType="InkToolbarCustomPenButton">
+                        <Setter Property="SelectedStrokeWidth" Value="1"/>
+                    </Style>
+                </InkToolbar.Resources>
+                <InkToolbarBallpointPenButton SelectedStrokeWidth="2"></InkToolbarBallpointPenButton>
+                <InkToolbarCustomPenButton x:Name="calligraphyPen"
+                                                   CustomPen="{StaticResource CalligraphicPen}"
+                                                   Palette="{StaticResource CalligraphicPenPalette}"
+                                                   SelectedBrushIndex="2"
+                                                   ToolTipService.ToolTip="Calligraphy pen">
+                    <Border>
+                        <Grid>
+                            <TextBlock AutomationProperties.AccessibilityView="Raw" FontFamily="Segoe MDL2 Assets" Text="&#xEDFB;" Canvas.ZIndex="1"/>
+                            <TextBlock AutomationProperties.AccessibilityView="Raw" FontFamily="Segoe MDL2 Assets" Text="&#xF0C7;" 
+                                                   Foreground="{x:Bind calligraphyPen.SelectedBrush, Mode=OneWay}" Canvas.ZIndex="0"/>
+                        </Grid>
+                    </Border>
+                    <InkToolbarCustomPenButton.ConfigurationContent>
+                        <InkToolbarPenConfigurationControl/>
+                    </InkToolbarCustomPenButton.ConfigurationContent>
+                </InkToolbarCustomPenButton>
+                <InkToolbarCustomToolButton x:Name="toolButtonLasso" Click="ToolButton_Lasso" ToolTipService.ToolTip="Selection tool">
+                    <SymbolIcon Symbol="{x:Bind LassoSelect}"/>
+                </InkToolbarCustomToolButton>
+                <InkToolbarCustomToggleButton x:Name="toggleButton" Click="Toggle_Custom" ToolTipService.ToolTip="Touch Writing">
+                    <SymbolIcon Symbol="{x:Bind TouchWriting}"/>
+                </InkToolbarCustomToggleButton>
+            </InkToolbar>
+            <TextBlock Name="pageIndexTextBlock" RelativePanel.Above="cmdBar" RelativePanel.AlignRightWithPanel="True" Text=""/>
+            <StackPanel Name="AnnoPhenoStackPanel" RelativePanel.Above="cmdBar" RelativePanel.AlignLeftWithPanel="True" Orientation="Horizontal"/>
+            <Grid Background="WhiteSmoke" Name="CameraCanvas" Height="300" Width="530" RelativePanel.Above="pageIndexTextBlock" RelativePanel.AlignRightWithPanel="True" Visibility="Collapsed">
+                <photovideoservice:PhotoVideoCaptureControl x:Name="captureControl"></photovideoservice:PhotoVideoCaptureControl>
+             
+                <StackPanel Height="30" VerticalAlignment="Top" >
+                    <Button  Height="30" Width="40" Click="CameraClose_Click">
+                        <SymbolIcon Symbol="Clear" ></SymbolIcon>
+                    </Button>
+                </StackPanel>
+                <StackPanel Height="30" VerticalAlignment="Top" HorizontalAlignment="Right" Orientation="Horizontal">
+
+                    <Button Height="30" Width="40" Name="VideoButton" Click="VideoButton_Click" IsEnabled="False">
+                        <Grid>
+                            <Ellipse x:Name="StartRecordingIcon" Fill="Red" Width="10" Height="10"/>
+                            <Rectangle x:Name="StopRecordingIcon" Fill="White" Width="20" Height="20" Visibility="Collapsed"/>
+                        </Grid>
+                    </Button>
+                    <Button Height="30" Width="40" Name="PhotoButton" Click="PhotoButton_Click" Foreground="White">
+                        <SymbolIcon Symbol="Camera"/>
+                    </Button>
+                </StackPanel>
+            </Grid>
+            
+            <CommandBar RelativePanel.AlignBottomWithPanel="True"
+                        RelativePanel.AlignRightWithPanel="True"
+                        Name="cmdBar">
+                <AppBarToggleButton Name="micButton" Icon="Microphone" Label="Speech recognition" Click="MicButton_Click" />
+                
+                <AppBarSeparator/>
+                <AppBarButton Icon="Page2" Label="Notes" Click="NotesButton_Click"/>
+                <AppBarToggleButton Icon="PreviewLink" Label="Add a photo" Name="OverviewButton" Click="OverviewButton_Click"/>
+                <AppBarToggleButton Icon="Message" Label="Speech" Name="SpeechButton" Click="SpeechButton_Click"/>
+                <AppBarButton  Icon="WebCam" Label="Photo/Video"  Click="TakePhoto_Click" >
+                    <!--
+                    <AppBarButton.Flyout>
+                        <MenuFlyout>
+                            <MenuFlyoutItem Text="Select a photo" Click="MenuFlyoutItem_Click" Tag="rating" Icon="BrowsePhotos"/>
+                            <MenuFlyoutItem Text="Take a photo" Click="TakePhoto_Click" Tag="Take a photo" Icon="Camera"/>
+                            <MenuFlyoutItem Text="Record a video" Click="MenuFlyoutItem_Click" Tag="distance" Icon="Video"/>
+                        </MenuFlyout>
+                    </AppBarButton.Flyout>
+                    -->
+                </AppBarButton>
+                <AppBarSeparator/>
+                <!--
+                <AppBarButton Icon="Message" Label="Speech" Click="PageOverviewButton_Click"/>
+                -->
+                <AppBarButton Icon="Back" Label="Back" Click="PreviousPageButton_Click"/>
+                <AppBarButton Icon="Forward" Label="Forward" Click="NextPageButton_Click"/>
+                <AppBarButton Icon="Add" Label=""  Click="AddPageButton_Click"/>
+                
+
+                <CommandBar.SecondaryCommands>
+                    <AppBarButton Icon="Save" Label="Save notes" Click="SaveNote_Click"/>
+                    <AppBarButton Icon="OpenFile" Label="Open notes" Click="LoadNote_Click"/>
+                </CommandBar.SecondaryCommands>
+
+                <CommandBar.Content>
+                    <TextBlock Name="cmdBarTextBlock" Text="" Margin="12,14"/>
+                </CommandBar.Content>
+            </CommandBar>
+            <Grid Background="White"
+                  RelativePanel.Above="cmdBar"
+                  RelativePanel.AlignLeftWithPanel="True"
+                  RelativePanel.AlignRightWithPanel="True"
+                  Name="addedPhenoGrid"
+                  Visibility="Collapsed">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="*"/>
+                </Grid.ColumnDefinitions>
+               
+            </Grid>
+
+            <Grid Background="White"
+                  RelativePanel.Above="cmdBar"
+                  RelativePanel.AlignLeftWithPanel="True"
+                  RelativePanel.AlignRightWithPanel="True"
+                  Name="searchPhenoGrid"
+                  Visibility="Collapsed">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="40"/>
+                    <RowDefinition Height="*"/>
+                </Grid.RowDefinitions>
+                <StackPanel Orientation="Horizontal">
+                    <TextBox></TextBox>
+                    <Button Width="40" Height="40">
+                        <SymbolIcon Symbol="Find"></SymbolIcon>
+                    </Button>
+                </StackPanel>
+            </Grid> 
+        </RelativePanel>
+        <Popup x:Name="OverviewPopUp" HorizontalOffset="0" VerticalOffset="0">
+            <local:OverviewPage x:Name="OverivePopUpPage"/>
+        </Popup>
+        <Popup x:Name="SpeechPopUp" HorizontalOffset="0" VerticalOffset="0">
+            <local:SpeechPage x:Name="SpeechPopUpPage"/>
+        </Popup>
     </Grid>
 </Page>
